# wt

./: Cargo.toml
src/: cli.rs  config.rs  gh.rs  ide.rs  main.rs  repo.rs  steps.rs
src/commands/: clean.rs  completions.rs  ls.rs  mod.rs  new.rs  open.rs  path.rs  prune.rs  rm.rs
